# ModelForge

./: AGENTS.md  README.md  ROADMAP.md  next-features-spec.md  next-features-spec.md⁠  prompts.md  pyproject.toml
examples/sample-system/: openapi.yaml
tests/: test_attack.py  test_candidate_merge.py  test_dfd.py  test_extractors.py  test_golden_outputs.py  test_llm.py  test_pipeline_cli.py  test_risk.py  test_schema_report.py  test_stride_questions.py
tests/fixtures/golden/sample-system/: attack.md  dfd.mmd  questions.md  risk.md  system_model.json  threats.md
tests/fixtures/sample-system/: README.md  main.tf
tests/fixtures/sample-system/docs/: architecture.md
threatmodel_ai/: __init__.py  errors.py  pipeline.py
threatmodel_ai/attack/: __init__.py  catalog.py  engine.py  models.py
threatmodel_ai/cli/: app.py
threatmodel_ai/dfd/: __init__.py  mermaid.py
threatmodel_ai/extract/: __init__.py  mermaid.py  openapi.py  readme.py  terraform.py
threatmodel_ai/ingest/: __init__.py  files.py
threatmodel_ai/llm/: __init__.py  candidates.py  client.py  merge.py  questions.py
threatmodel_ai/model/: __init__.py  evidence.py  ids.py  io.py  merge.py  schema.py
threatmodel_ai/questions/: __init__.py  generator.py
threatmodel_ai/report/: __init__.py  markdown.py
threatmodel_ai/risk/: __init__.py  engine.py  models.py
threatmodel_ai/stride/: __init__.py  engine.py  models.py
